# glyph

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  devenv.nix  devenv.yaml  gsd.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  secretspec.toml  tsconfig.base.json
.claude/: settings.json
.claude/commands/: build.md  migrate.md  test.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.planning/: PROJECT.md  REPO-STRUCTURE.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-foundation-VERIFICATION.md  PLAN.md  SUMMARY.md
.planning/phases/02-core-domain/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md  02-05-PLAN.md  02-06-PLAN.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-authentication/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-06-PLAN.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/03.1-style-guideline/: 03.1-CONTEXT.md  03.1-RESEARCH.md  3.1-01-PLAN.md  3.1-01-SUMMARY.md  3.1-02-PLAN.md  3.1-02-SUMMARY.md  3.1-03-PLAN.md  3.1-03-SUMMARY.md  3.1-VERIFICATION.md
.planning/phases/04-user-team-management/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-07-PLAN.md  04-07-SUMMARY.md  04-08-PLAN.md  04-08-SUMMARY.md  04-09-PLAN.md  04-09-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-UAT.md  04-VERIFICATION.md
.planning/phases/04.1-ux-navigation-flow/: 04.1-01-PLAN.md  04.1-01-SUMMARY.md  04.1-02-PLAN.md  04.1-02-SUMMARY.md  04.1-03-PLAN.md  04.1-03-SUMMARY.md  04.1-04-PLAN.md  04.1-04-SUMMARY.md  04.1-05-PLAN.md  04.1-05-SUMMARY.md  04.1-06-PLAN.md  04.1-06-SUMMARY.md  04.1-CONTEXT.md  04.1-RESEARCH.md  04.1-VERIFICATION.md
.planning/phases/04.2-style-phase-4-screens/: 04.2-01-PLAN.md  04.2-01-SUMMARY.md  04.2-02-PLAN.md  04.2-02-SUMMARY.md  04.2-03-PLAN.md  (+3 more)
.planning/research/: 01-annotation-platforms.md
apps/api/: Cargo.toml
apps/api/src/: error.rs  lib.rs  main.rs  openapi.rs
apps/api/src/extractors/: current_user.rs  mod.rs  require_admin.rs  require_team_lead.rs
apps/api/src/middleware/: audit.rs  auth.rs  mod.rs  tracing.rs
apps/api/src/routes/: annotations.rs  auth.rs  data_sources.rs  drafts.rs  mod.rs  project_types.rs  projects.rs  queue.rs  reviews.rs  skills.rs  skip_reasons.rs  tasks.rs  teams.rs  users.rs  workflows.rs
apps/api/src/services/: mod.rs  permission_service.rs  schema_service.rs
apps/api/src/ws/: events.rs  hub.rs  mod.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/web/: index.html  package.json  setup.sh  tsconfig.json  vite.config.ts
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/extractors/: mod.rs
crates/api/src/middleware/: mod.rs
crates/api/src/routes/: health.rs  projects.rs  tasks.rs  workflows.rs
crates/core/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: project.rs  quality.rs  task.rs  workflow.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/nats/: events.rs  mod.rs
crates/infrastructure/src/postgres/: mod.rs  pool.rs
crates/infrastructure/src/redis/: cache.rs  mod.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/plugins/src/js/: mod.rs
crates/services/: Cargo.toml
crates/services/src/: assignment.rs  lib.rs  workflow_engine.rs
docs/design/: PRD-CHEATSHEET.md  product-requirements.md
infrastructure/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker  nginx.conf
layouts/base/: annotation-base.njk
layouts/clinical-ner-v1/: README.md  config.json  schema.json  template.njk
layouts/macros/: common.njk
layouts/partials/: entity-legend.njk
libs/auth/: Cargo.toml
libs/auth/src/: audit.rs  config.rs  error.rs  jwks.rs  jwt.rs  lib.rs  oidc.rs  tokens.rs
libs/common/: Cargo.toml
libs/common/src/: lib.rs  telemetry.rs
libs/db/: Cargo.toml
libs/db/src/: audit.rs  lib.rs  pagination.rs
libs/db/src/repo/: errors.rs  mod.rs  pg_assignment.rs  pg_data_source.rs  pg_project.rs  pg_project_type.rs  pg_skill.rs  pg_stubs.rs  pg_task.rs  pg_team.rs  pg_user.rs  traits.rs
libs/domain/: Cargo.toml
libs/quality/: Cargo.toml
libs/quality/src/: export.rs  lib.rs  scoring.rs
libs/workflow-engine/: Cargo.toml
libs/workflow-engine/src/: assignment.rs  engine.rs  lib.rs
libs/workflow-engine/src/config/: mod.rs  step_library.rs  types.rs
libs/workflow-engine/src/consensus/: alpha.rs  iou.rs  kappa.rs  mod.rs
libs/workflow-engine/src/events/: event_types.rs  mod.rs  replay.rs  store.rs
libs/workflow-engine/src/executor/: adjudication.rs  annotation.rs  auto_process.rs  conditional.rs  handlers.rs  mod.rs  review.rs  sub_workflow.rs  traits.rs
libs/workflow-engine/src/goals/: goal_evaluator.rs  mod.rs  tracker.rs
libs/workflow-engine/src/parser/: mod.rs  parser.rs  validator.rs
libs/workflow-engine/src/state/: mod.rs  step_state.rs  workflow_state.rs
libs/workflow-engine/src/transition/: conditions.rs  evaluator.rs  mod.rs
migrations/: 0001_create_enums.sql  0002_create_users.sql  0003_create_projects.sql  0004_create_tasks.sql  0005_create_annotations.sql  0006_create_quality.sql  0007_create_teams.sql  0008_create_skills.sql  0009_extend_users.sql  0010_add_deleted_to_user_status.sql  0011_project_types.sql  0012_data_sources.sql  0013_project_columns.sql  0014_add_deleted_to_project_status.sql  0015_workflow_events.sql  0016_workflow_snapshots.sql  0017_assignment_extensions.sql  0018_layout_versions.sql
services/ml-suggestions/: pyproject.toml
services/ml-suggestions/src/ml_suggestions/: __init__.py  main.py
services/ml-suggestions/src/ml_suggestions/handlers/: __init__.py  ner_suggestions.py
services/ml-suggestions/tests/: __init__.py  test_ner_suggestions.py
(+383 files in other folders)
