[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Parth Patel <parthspatel.nj@gmail.com>"]
license = "MIT"
repository = "https://github.com/parthpatel/glyph"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
deadpool-redis = "0.18"

# Messaging
async-nats = "0.38"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typeshare = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUIDs and time
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Plugin runtime
wasmtime = "28"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Testing
mockall = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
