[workspace]
resolver = "2"
members = [
    "apps/api",
    "apps/worker",
    "apps/cli",
    "libs/domain",
    "libs/db",
    "libs/workflow-engine",
    "libs/quality",
    "libs/plugins",
    "libs/auth",
    "libs/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Glyph Team"]
license = "MIT"
repository = "https://github.com/parthpatel/glyph"

[workspace.dependencies]
# Internal crates
glyph-domain = { path = "libs/domain" }
glyph-db = { path = "libs/db" }
glyph-workflow-engine = { path = "libs/workflow-engine" }
glyph-quality = { path = "libs/quality" }
glyph-plugins = { path = "libs/plugins" }
glyph-auth = { path = "libs/auth" }
glyph-common = { path = "libs/common" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
deadpool-redis = "0.18"

# Messaging
async-nats = "0.38"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typeshare = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUIDs and time
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# HTTP types
http = "1.2"

# Error handling (RFC 7807)
problem_details = { version = "0.9", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }

# Plugin runtime
wasmtime = "28"

# Configuration
config = "0.14"
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
mockall = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
