[package]
name = "glyph-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "glyph"
path = "src/main.rs"

[dependencies]
glyph-domain = { path = "../../libs/domain" }
glyph-db = { path = "../../libs/db" }
glyph-common = { path = "../../libs/common" }

tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
