[package]
name = "glyph-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "glyph-worker"
path = "src/main.rs"

[dependencies]
glyph-domain = { path = "../../libs/domain" }
glyph-db = { path = "../../libs/db" }
glyph-common = { path = "../../libs/common" }
glyph-workflow-engine = { path = "../../libs/workflow-engine" }
glyph-quality = { path = "../../libs/quality" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-nats.workspace = true

[lints]
workspace = true
