[package]
name = "glyph-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "glyph_domain"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
typeshare.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

[lints]
workspace = true
