[package]
name = "glyph-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "glyph_plugins"
path = "src/lib.rs"

[dependencies]
glyph-domain = { path = "../domain" }

tokio.workspace = true
async-trait.workspace = true
wasmtime.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
