[package]
name = "glyph-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "glyph_services"
path = "src/lib.rs"

[dependencies]
glyph-domain = { path = "../domain" }
glyph-infrastructure = { path = "../infrastructure" }

tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
