[package]
name = "glyph-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "glyph_auth"
path = "src/lib.rs"

[dependencies]
glyph-domain = { path = "../domain" }

tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true

[lints]
workspace = true
