[package]
name = "glyph-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "glyph_db"
path = "src/lib.rs"

[dependencies]
glyph-domain = { path = "../domain" }

sqlx.workspace = true
deadpool-redis.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
typeshare.workspace = true
chrono.workspace = true
uuid.workspace = true

[lints]
workspace = true
