[package]
name = "glyph-quality"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "glyph_quality"
path = "src/lib.rs"

[dependencies]
glyph-domain = { path = "../domain" }
glyph-db = { path = "../db" }

tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
