[package]
name = "glyph-workflow-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "glyph_workflow_engine"
path = "src/lib.rs"

[dependencies]
glyph-domain = { path = "../domain" }
glyph-db = { path = "../db" }

tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
serde_yml.workspace = true
backoff.workspace = true
strsim.workspace = true

[lints]
workspace = true
